# asteroid-2048

./: CMakeLists.txt  Game.qml  Main.qml  README.md  asteroid-2048.desktop.template  asteroid-2048.pro  asteroid-diamonds.desktop.template  main.qml  resources.qrc
i18n/: asteroid-2048.ar_AR.ts  asteroid-2048.ast.ts  asteroid-2048.cs.ts  asteroid-2048.da.ts  asteroid-2048.de_DE.ts  asteroid-2048.desktop.h  asteroid-2048.el.ts  asteroid-2048.en_GB.ts  asteroid-2048.es.ts  asteroid-2048.es_AR.ts  asteroid-2048.fa.ts  asteroid-2048.fi.ts  asteroid-2048.fr.ts  asteroid-2048.gl.ts  asteroid-2048.he.ts  asteroid-2048.hr.ts  asteroid-2048.hu.ts  asteroid-2048.id.ts  asteroid-2048.it.ts  asteroid-2048.ja.ts  asteroid-2048.ka.ts  asteroid-2048.kab.ts  asteroid-2048.ko.ts  asteroid-2048.lb.ts  asteroid-2048.lt.ts  asteroid-2048.mr.ts  asteroid-2048.ms.ts  asteroid-2048.nb_NO.ts  asteroid-2048.nl_BE.ts  asteroid-2048.nl_NL.ts  asteroid-2048.pl.ts  asteroid-2048.pt.ts  asteroid-2048.pt_BR.ts  asteroid-2048.pt_PT.ts  asteroid-2048.ro.ts  asteroid-2048.ru.ts  asteroid-2048.sk.ts  asteroid-2048.sv.ts  asteroid-2048.te.ts  asteroid-2048.th.ts  (+57 more)
src/: CMakeLists.txt  Game.qml  main.qml
